Fix: Breederline icon overlapping sibling h2 above it.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -87,6 +87,7 @@ hr {
   width: 100%;
   height: 6px;
   border-radius: 3px;
+  margin-bottom: 1.5em;
   border: none;
   background-color: Theme.$secondaryGreen;
 }
